LRIS-29332 LESA Ticket View: Fix Expanding and Collapsing comments

--- a/modules/dxp/apps/osb/osb-customer/osb-portlet/docroot/support/2/css/_comments.scss
+++ b/modules/dxp/apps/osb/osb-customer/osb-portlet/docroot/support/2/css/_comments.scss
@@ -21,12 +21,10 @@
 
 .comment-collapsed {
 	&.ticket-comment {
-		.comment-body {
+		.comment-body pre {
 			color: $info;
-			display: inline;
 			font-style: italic;
 			height: 1.5em;
-			margin: 0;
 			overflow: hidden;
 			text-overflow: ellipsis;
 			white-space: nowrap;
